--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> hello Git huuuub </h1>
-    <p>harki harki</p>
+    <header>
+        header
+    </header>
 </body>
 </html>
