--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <header>
         header
     </header>
+    <div class="slider">
+        <h1>slide one</h1>
+        <h2>slide two</h2>
+    </div>
 </body>
 </html>
