--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="slider">
         <h1>slide one</h1>
         <h2>slide two</h2>
+        <h1>slide three</h1>
     </div>
     <footer>
         footer
