--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>slide three</h1>
     </div>
     <footer>
-        footer
+        all rights are reserved © 2024
     </footer>
 </body>
 </html>
