--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <header>
         header
     </header>
+    <dev>
+        <img src="image.jpg" alt="">
+    </dev>
     <div class="slider">
         <h1>slide one</h1>
         <h2>slide two</h2>
