--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        header
+        new header
     </header>
     <dev>
         <img src="image.jpg" alt="">
@@ -18,7 +18,7 @@
         <h1>slide three</h1>
     </div>
     <footer>
-        all rights are reserved © 2024
+        all rights are reserved © 2024 niss 2020
     </footer>
     <script src="script.js"></script>
 </body>
