slide tree added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="slider">
         <h1>slide one</h1>
         <h2>slide two</h2>
+        <h1>slide therr</h1>
         
     </div>
     <footer>
