git ignore added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="slider">
         <h1>slide one</h1>
         <h2>slide two</h2>
-        
+        <p>slide tree</p>
     </div>
     <footer>
         all rights are reserved © 2024
